VEX-968 fix button color not visible

--- a/ui/components/b2b/components/configure-offer/_b2bApplyDiscountModal.scss
+++ b/ui/components/b2b/components/configure-offer/_b2bApplyDiscountModal.scss
@@ -70,7 +70,8 @@
   }
   .nds-b2b-modal-button {
     color: $azure;
-    padding: 0rem 2.5rem;
+    padding: 0.25rem 2.5rem;
+    margin: 0 1rem 0 0;
     &.nds-b2b-primary {
       color: $white;
       background: $azure;
