--- a/ui/components/b2b/components/configure-offer/_b2bConfigCard.scss
+++ b/ui/components/b2b/components/configure-offer/_b2bConfigCard.scss
@@ -248,6 +248,9 @@
             }
           }
         }
+        .nds-b2b-modal-cancel{
+          color: rgba(0, 68, 135, 1);
+        }
       }
     }
   }
